--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html></html>
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>É OS GURI</title>
 </head>
 <body>
-    <h1>É os guri, Não tem como</h1>
-    
+    <h1>Primeiro site do Guri. Comer um churras e tomar um shimas, bahh</h1>
 </body>
 </html>
