--- a/Aula 4/index.html
+++ b/Aula 4/index.html
@@ -30,7 +30,7 @@
         <li>Um item da lista ul</li>
         <li>Outro item da lista</li>
     </ul>
-    <div>
+    <div id="Cabeçalho_4"> 
         <h4>Cabeçalho 4</h4>
         <p><em>Coloquei esse cabeçalho dentro de uma div</em></p>
 
@@ -39,8 +39,8 @@
     </div>
     <h6>Cabeçalho 6 (final)</h6>
     <p>Último cabeçalho</p>
-    <div>
-        
+    <div id = "div_vazia">
+
     </div>
 
 
